# virtual-herbal-garden

./: .gitignore  Docker-compose  Docker-compose.yaml  Jenkinsfile  Jenkinsfile.save  eks-cluster.yaml
client/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  firebase.js  index.css
client/src/components/: AIChatAssistant.jsx  AuthComponent.jsx  Footer.jsx  Home.jsx  IdentifyPlant.jsx  Navbar.jsx  PlantCard.jsx  PlantDetail.jsx  PlantList.jsx  backupAut.jsx
herbal-garden-application/: Chart.yaml  values.yaml
herbal-garden-application/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
server/: .env  Dockerfile  database.py  dockerfile  dummy.txt  main.py  pyproject.toml  requirements.txt  schemas.py
