[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["dharshan231201 <dharshan@finiteloop.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
psycopg2-binary = "^2.9.10"
SQLAlchemy = "^2.0.41"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
